# cloud_sync_lib

./: .gitignore  Cargo.toml  DRY_REFACTOR_PLAN.md  README.md  USER_GUIDE.md  advanced_features_plan.md  config.toml  embedded_refactor_plan.md  get_refresh_token.py  google_drive_setup.md  performance_size_optimization_plan.md  production_ready_enhancement_plan.md  refactor_plan.md
cloud_simulation/dropbox/: test_file.txt
cloud_sync_backup/: Cargo.toml
cloud_sync_backup/src/: main.rs
cloud_sync_core/src/: lib.rs  state.rs  traits.rs
cloud_sync_daemon/: Cargo.toml  README.md
cloud_sync_daemon/src/: config.rs  control.rs  main.rs  sync_engine.rs  watcher.rs
cloud_sync_egui/src/: main.rs
cloud_sync_lib/: Cargo.toml  README.md
cloud_sync_lib/examples/: rate_limiting.rs
cloud_sync_lib/src/: checksum.rs  ignore.rs  lib.rs  providers.rs  rate_limit.rs  state.rs  traits.rs
cloud_sync_lib/src/providers/: azure_blob.rs  b2.rs  box_provider.rs  dropbox.rs  encryption.rs  fallback.rs  gcs.rs  google_drive.rs  ipfs.rs  local_sim.rs  mega_provider.rs  mod.rs  nextcloud.rs  onedrive.rs  pcloud.rs  s3.rs  sftp.rs  utils.rs  webdav.rs
cloud_sync_std/: Cargo.toml
cloud_sync_std/src/: checksum.rs  ignore.rs  lib.rs
cloud_sync_tauri/: Cargo.toml  build.rs  tauri.conf.json
cloud_sync_tauri/binaries/: cloud_sync_daemon-x86_64-unknown-linux-gnu
cloud_sync_tauri/src/: main.rs
cloud_sync_ui/src/: handlers.rs  index.html  lib.rs  main.rs  parser.rs
crates/cloud_sync_backup/: Cargo.toml  README.md
crates/cloud_sync_backup/src/: config.rs  main.rs
crates/cloud_sync_core/: Cargo.toml
crates/cloud_sync_core/src/: lib.rs  path.rs  state.rs  traits.rs
crates/cloud_sync_daemon/: Cargo.toml
crates/cloud_sync_daemon/src/: config.rs  control.rs  main.rs  sync_engine.rs  utils.rs  watcher.rs
crates/cloud_sync_egui/: Cargo.toml
crates/cloud_sync_egui/src/: main.rs
crates/cloud_sync_lib/: Cargo.toml
crates/cloud_sync_lib/examples/: encrypted_backend.rs  simple_sync.rs
crates/cloud_sync_lib/src/: config.rs  lib.rs  rate_limit.rs
crates/cloud_sync_lib/src/providers/: azure_blob.rs  b2.rs  box_provider.rs  dropbox.rs  encryption.rs  fallback.rs  gcs.rs  google_drive.rs  ipfs.rs  local_sim.rs  mega_provider.rs  mod.rs  nextcloud.rs  onedrive.rs  pcloud.rs  s3.rs  sftp.rs  utils.rs  webdav.rs
crates/cloud_sync_std/: Cargo.toml
crates/cloud_sync_std/src/: checksum.rs  ignore.rs
crates/cloud_sync_tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/cloud_sync_ui/: Cargo.toml
crates/cloud_sync_ui/src/: handlers.rs  index.html  lib.rs  parser.rs
docs/: application_suggestions.md  architecture.md  azure_blob_storage_expansion_plan.md  azure_blob_storage_setup.md  backblaze_b2_expansion_plan.md  box_setup.md  comparison.md  daemon_analysis.md  dry_refactor_plan.md  dry_refactor_plan_phase2.md  dry_refactor_plan_phase3.md  embedded_refactor_plan.md  future_backends_recommendation.md  future_features_plan.md  future_providers.md  google_cloud_storage_expansion_plan.md  ipfs_pinning_service_expansion_plan.md  nextcloud_implementation_plan.md  nextcloud_setup.md  onedrive_setup.md  pcloud_expansion_plan.md  provider_expansion_plan.md  raspberry_pi_nextcloud_setup.md  raspberry_pi_sftp_setup.md  raspberry_pi_webdav_setup.md  recommended_backends.md  s3_setup.md  test_verifiers_refactor_plan.md  webdav_setup.md
docs/setup/: backblaze_b2_setup.md  box_setup.md  dropbox_setup.md  google_cloud_storage_setup.md  google_drive_setup.md  ipfs_pinning_service_setup.md  mega_setup.md  onedrive_setup.md  pcloud_setup.md  raspberry_pi_sftp_setup.md  raspberry_pi_webdav_setup.md  s3_setup.md  sftp_setup.md
notes/: attributes.md  hardening_plan.md  next_refactor_steps.md  refactor_plan.md
scripts/: auto_box.py  get_box_token.py  get_dropbox_token.py  get_onedrive_token.py  get_refresh_token.py
watched_folder/: .sync_state.json  LICENSE
