[workspace]
members = [
    "cloud_sync_lib",
    "cloud_sync_daemon",
    "cloud_sync_ui",
    "cloud_sync_tauri",
    "cloud_sync_egui",
    "cloud_sync_backup",
    "cloud_sync_core",
    "cloud_sync_std",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

