[workspace]
members = [
    "crates/cloud_sync_lib",
    "crates/cloud_sync_daemon",
    "crates/cloud_sync_ui",
    "crates/cloud_sync_tauri",
    "crates/cloud_sync_egui",
    "crates/cloud_sync_backup",
    "crates/cloud_sync_core",
    "crates/cloud_sync_std",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

