[workspace]
members = [
    "crates/cloud_sync_lib",
    "crates/cloud_sync_daemon",
    "crates/cloud_sync_ui",
    "crates/cloud_sync_tauri",
    "crates/cloud_sync_egui",
    "crates/cloud_sync_backup",
    "crates/cloud_sync_core",
    "crates/cloud_sync_std",
]
resolver = "2"

[workspace.dependencies]
tokio = "1"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
async-trait = "0.1"
tempfile = "3.8"
tracing = "0.1"
ignore = "0.4"
futures-util = "0.3"
toml = "0.8"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

