[package]
name = "cloud_sync_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "rt", "io-util"] }
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
rust-s3 = { version = "0.33", default-features = false, features = ["tokio-rustls-tls"], optional = true }
ssh2 = { version = "0.9", optional = true }
mega = { version = "0.4", optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = ["google_drive", "dropbox", "onedrive", "webdav", "s3", "sftp", "nextcloud", "box", "mega"]
google_drive = []
dropbox = []
onedrive = []
webdav = []
s3 = ["dep:rust-s3"]
sftp = ["dep:ssh2"]
nextcloud = []
box = []
mega = ["dep:mega", "dep:tokio-util", "dep:futures-util"]

[dev-dependencies]
tempfile = "3"
toml = "0.8"
wiremock = "0.6"

