[package]
name = "cloud_sync_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "rt", "io-util"] }
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
rust-s3 = { version = "0.33", default-features = false, features = ["tokio-rustls-tls"], optional = true }
ssh2 = { version = "0.9", optional = true }
bytes = "1"
mega = { version = "0.4", optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
futures-util = { version = "0.3", optional = true }
base64 = { version = "0.21", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = "0.10"
httpdate = { version = "1.0", optional = true }
yup-oauth2 = { version = "8.3", optional = true }
chrono = { version = "0.4", optional = true }
aes-gcm = "0.10"
rand = "0.8"


[features]
default = ["google_drive", "dropbox", "onedrive", "webdav", "s3", "sftp", "nextcloud", "box", "mega", "azure_blob", "gcs", "b2", "pcloud", "ipfs"]
google_drive = []
dropbox = []
onedrive = []
webdav = []
s3 = ["dep:rust-s3"]
sftp = ["dep:ssh2"]
nextcloud = []
box = []
mega = ["dep:mega", "dep:tokio-util", "dep:futures-util"]
azure_blob = ["dep:base64", "dep:hmac", "dep:httpdate"]
gcs = ["dep:yup-oauth2", "dep:chrono"]
b2 = []
pcloud = []
ipfs = []

[dev-dependencies]
tempfile = "3"
toml = "0.8"
wiremock = "0.6"

