[package]
name = "cloud_sync_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
cloud_sync_core = { path = "../cloud_sync_core", default-features = false, features = ["std"] }
cloud_sync_std = { path = "../cloud_sync_std" }
tokio = { version = "1", features = ["fs", "rt", "io-util"] }
thiserror = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots", "json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
xmlparser = "0.13"
rust-s3 = { version = "0.33", default-features = false, features = ["tokio-rustls-tls"], optional = true }
ssh2 = { version = "0.9", optional = true }
bytes = "1"
mega = { version = "0.4", optional = true }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = { version = "0.3" }
base64 = { version = "0.21", optional = true }
ring = "0.17"
httpdate = { version = "1.0", optional = true }
yup-oauth2 = { version = "8.3", optional = true }
chrono = { version = "0.4" }
filetime = "0.2"
aes-gcm = "0.10"
rand = "0.8"
ignore = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
md5 = "0.7.0"
sha1 = "0.10.6"




[features]
default = []
google_drive = []
dropbox = []
onedrive = []
webdav = []
s3 = ["dep:rust-s3"]
sftp = ["dep:ssh2"]
nextcloud = []
box = []
mega = ["dep:mega"]
azure_blob = ["dep:base64", "dep:httpdate"]
gcs = ["dep:yup-oauth2"]
b2 = []
pcloud = []
ipfs = []

[dev-dependencies]
tempfile = "3"
toml = "0.8"
wiremock = "0.6"
