[package]
name = "cloud_sync_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", features = ["alloc"] }
async-trait = "0.1"
hashbrown = { version = "0.14", default-features = false, features = ["serde", "ahash"] }
reqwest = { version = "0.11", default-features = false, optional = true }

serde_json = { version = "1.0", optional = true }
tokio = { version = "1", features = ["fs", "io-util"], optional = true }

[features]
default = ["std"]
std = ["serde/std", "hashbrown/default", "dep:reqwest", "dep:serde_json", "dep:tokio"]
