[package]
name = "cloud_sync_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", features = ["alloc"] }
async-trait = { workspace = true }
hashbrown = { version = "0.14", default-features = false, features = ["serde", "ahash"] }
reqwest = { version = "0.11", default-features = false, optional = true }

serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["fs", "io-util"], optional = true }

[features]
default = ["std"]
std = ["serde/std", "hashbrown/default", "dep:reqwest", "dep:serde_json", "dep:tokio"]
