[package]
name = "cloud_sync_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-stream = "0.3"
futures-util = { workspace = true }
